# pretix-regex-validation

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_regex_validation/: __init__.py  apps.py  signals.py  urls.py  views.py
pretix_regex_validation/templates/pretix_regex_validation/: settings.html
